--- a/client/src/CSS/Match.css
+++ b/client/src/CSS/Match.css
@@ -7,11 +7,11 @@ table {
   
   td {
     text-align: center;
-    padding: 8px;
+    padding: 1%;
   }
   tr{
       width: 100%;
-      height: 2vh;
+      height: 2%;
       left:0%;
       margin-bottom: 2px;    
 
