--- a/client/src/CSS/Summary.css
+++ b/client/src/CSS/Summary.css
@@ -2,22 +2,25 @@ table {
     width: 50%;
     position: absolute;
     border: 1px solid black;
-    left:25%
+    left:25%;
+    background-color:red;
   }
   
   td {
-    text-align: center;
     padding: 1%;
+    text-align: left;
   }
   tr{
       width: 100%;
-      height: 1vh;
+      height: 2%;
       left:0%;
       margin-bottom: 2px;    
 
   }
   
   tr:nth-child(even){background-color: #f2f2f2}
-  tr:first-child{background-color: #04AA6D;
+  tr:first-child{background-color: blue;
     color: white;}
+    tr:nth-child(2){background-color:blue;opacity: 0.6;}
+
   
