--- a/client/src/CSS/Navbar.css
+++ b/client/src/CSS/Navbar.css
@@ -12,11 +12,9 @@ ul {
     padding-left: 30%;
   }
   .navbar{
-    background-color: #333;
     position: fixed;
     top: 0;
     width: 100%;    
-    height: 8%;
     display: block;
   }
   li {
@@ -32,9 +30,10 @@ ul {
   }
   
   li a:hover:not(.active) {
-    background-color: greenyellow;
+    background-color: green;
+    color: white;
+
   }
-  
   .active {
     background-color: #04AA6D;
   }
