updated player order in scorecard

--- a/client/src/CSS/Slideshow.css
+++ b/client/src/CSS/Slideshow.css
@@ -72,3 +72,8 @@ display: block;
   font-size: 5vh;
   border-radius: 10px 10px 10px 10px;
 }
+
+
+.right.carousel-control, .left.carousel-control {
+  display: none;
+}
